--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <receiver
             android:name=".MyReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
             <intent-filter android:priority="1000"> <!-- 优先级：-1000~1000，系统短信优先级为-1 -->
                 <!-- 订阅广播事件类型 -->
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
